--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "axois": "0.0.1-security",
     "bootstrap": "^5.1.1",
+    "buffer": "^6.0.3",
     "date-fns": "^2.0.0-beta.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
